*********************************************************
* Feather - Lightweight GUI Abstraction Layer Changelog *
*********************************************************

0.1.1
------
- Added static linking support
- Fixed GetStyle() function signature

0.1
------
- Initial Public Release