@@ -6,6 +6,8 @@
 ------
 - Added static linking support
 - Fixed GetStyle() function signature
+- Added length argument to SetText()
+- Added AddLambdaListener and RegisterLambda
 
 0.1
 ------
